--- a/src/app/seguranca/login/login.component.html
+++ b/src/app/seguranca/login/login.component.html
@@ -1,84 +1,168 @@
 <div class="p-grid p-justify-center card">
+  <div class="p-col-11 p-sm-10 p-md-4">
+    <p-card>
+      <div class="p-grid">
+        <div class="p-col-12 text-center">
+          <img
+            class="logo"
+            src="../../assets/logo.png"
+            alt="DataLab - Incêndios Florestais"
+          />
+          <h2>DataLab - Incêndios</h2>
+        </div>
 
-    <div class="p-col-11 p-sm-10 p-md-4">
+        <form
+          autocomplete="off"
+          class="p-col-12 formLogin"
+          #formLogin="ngForm"
+          (keydown.enter)="submitBtn.click()"
+        >
+          <div class="p-field p-fluid">
+            <label for="email">E-mail</label>
+            <input
+              id="email"
+              type="email"
+              name="email"
+              [(ngModel)]="login.email"
+              placeholder="@bombeirospb.gov"
+              pInputText
+              required
+              email
+              #email="ngModel"
+              ngModel
+            />
 
-        <p-card>
+            <app-mensagem-de-erro
+              [controle]="email"
+              erro="required"
+              mensagem="Informe o email"
+            ></app-mensagem-de-erro>
+            <app-mensagem-de-erro
+              [controle]="email"
+              erro="email"
+              mensagem="E-mail inválido"
+            ></app-mensagem-de-erro>
+          </div>
 
-            <div class="p-grid">
+          <div class="p-field p-fluid">
+            <label for="senha">Senha</label>
+            <p-password
+              id="senha"
+              [feedback]="false"
+              toggleMask="true"
+              name="senha"
+              [(ngModel)]="login.password"
+              minlength="6"
+              maxlength="100"
+              required
+              #senha="ngModel"
+              ngModel
+            ></p-password>
 
-                <div class="p-col-12 text-center">
-                    <img class="logo" src="../../assets/logo.png" alt="DataLab - Incêndios Florestais">
-                    <h2>DataLab - Incêndios</h2>
-                </div>
+            <app-mensagem-de-erro
+              [controle]="senha"
+              erro="required"
+              mensagem="Informe a senha"
+            ></app-mensagem-de-erro>
+            <app-mensagem-de-erro
+              [controle]="senha"
+              erro="minlength"
+              mensagem="Mínimo de {{
+                senha.errors?.minlength?.requiredLength
+              }} caracteres"
+            ></app-mensagem-de-erro>
+          </div>
 
-                <form autocomplete="off" class="p-col-12 formLogin" #formLogin="ngForm" (keydown.enter)="submitBtn.click()">
+          <div class="esqueci-senha">
+            <button
+              class="p-button-link link-esqueci-senha"
+              type="button"
+              (click)="dialogIsVisible = !dialogIsVisible"
+              label="Esqueci minha senha"
+              pButton
+            ></button>
+          </div>
 
-                    <div class="p-field p-fluid">
-                        <label for="email">E-mail</label>
-                        <input id="email" type="email" name="email" [(ngModel)]="login.email" placeholder="@bombeirospb.gov" pInputText required email #email="ngModel" ngModel/>
-
-                        <app-mensagem-de-erro [controle]="email" erro="required" mensagem="Informe o email"></app-mensagem-de-erro>
-                        <app-mensagem-de-erro [controle]="email" erro="email" mensagem="E-mail inválido"></app-mensagem-de-erro>
-                    </div>
-
-                    <div class="p-field p-fluid">
-                        <label for="senha">Senha</label>
-                        <p-password id="senha" [feedback]="false" toggleMask=true name="senha" [(ngModel)]="login.password" minlength="6" maxlength="100" required #senha="ngModel" ngModel></p-password>
-
-                        <app-mensagem-de-erro [controle]="senha" erro="required" mensagem="Informe a senha"></app-mensagem-de-erro>
-                        <app-mensagem-de-erro [controle]="senha" erro="minlength" mensagem="Mínimo de {{senha.errors?.minlength?.requiredLength}} caracteres"></app-mensagem-de-erro>
-                    </div>
-
-                    <div class="esqueci-senha">
-                        <button class="p-button-link link-esqueci-senha" type="button" (click)="dialogIsVisible = !dialogIsVisible" label="Esqueci minha senha" pButton></button>
-                    </div>
-
-                    <div class="p-fluid">
-                        <button pButton type="button" label="Entrar" (click)="logar()" [disabled]="!formLogin.valid" #submitBtn></button>
-                    </div>
-
-                </form>
-
-            </div>
-
-        </p-card>
-
-    </div>
-
+          <div class="p-fluid">
+            <button
+              pButton
+              type="button"
+              label="Entrar"
+              (click)="logar()"
+              [disabled]="!formLogin.valid"
+              #submitBtn
+            ></button>
+          </div>
+        </form>
+      </div>
+    </p-card>
+  </div>
 </div>
 
-
 <div>
-    <form id="form-esqueci-senha" #formEsqueciSenha="ngForm" autocomplete="off">
+  <form id="form-esqueci-senha" #formEsqueciSenha="ngForm" autocomplete="off">
+    <p-dialog
+      [modal]="true"
+      [(visible)]="dialogIsVisible"
+      [closable]="false"
+      [baseZIndex]="10000"
+      [draggable]="false"
+      [resizable]="false"
+      [style]="{ width: '450px' }"
+    >
+      <ng-template pTemplate="header">
+        <div class="header-recuperar-senha">Esqueceu sua senha?</div>
+      </ng-template>
 
-        <p-dialog [modal]=true [(visible)]="dialogIsVisible" [closable]="false" [baseZIndex]="10000" [draggable]="false" [resizable]="false" [style]="{width: '450px'}">
+      <ng-template pTemplate="content">
+        <div class="p-field p-fluid">
+          <label for="email">E-mail </label>
+          <input
+            id="email"
+            type="text"
+            [(ngModel)]="emailEsqueciMinhaSenha"
+            name="emailEsqueciMinhaSenha"
+            placeholder="Informe o e-mail utilizado no seu cadastro"
+            required
+            email
+            #email="ngModel"
+            pInputText
+          />
 
-            <ng-template pTemplate="header">
-                <div class="header-recuperar-senha">
-                    Esqueceu sua senha?
-                </div>
-            </ng-template>
+          <app-mensagem-de-erro
+            [controle]="email"
+            erro="required"
+            mensagem="Informe o email"
+          ></app-mensagem-de-erro>
+          <app-mensagem-de-erro
+            [controle]="email"
+            erro="email"
+            mensagem="E-mail inválido"
+          ></app-mensagem-de-erro>
+        </div>
+      </ng-template>
 
-            <ng-template pTemplate="content">
-
-                <div class="p-field p-fluid">
-                    <label for="email">E-mail </label>
-                    <input id="email" type="text" [(ngModel)]="emailEsqueciMinhaSenha" name="emailEsqueciMinhaSenha" placeholder="Informe o e-mail utilizado no seu cadastro" required email #email="ngModel" pInputText>
-
-                    <app-mensagem-de-erro [controle]="email" erro="required" mensagem="Informe o email"></app-mensagem-de-erro>
-                    <app-mensagem-de-erro [controle]="email" erro="email" mensagem="E-mail inválido"></app-mensagem-de-erro>
-                </div>
-
-            </ng-template>
-
-            <ng-template pTemplate="footer">
-                <div class="botoes">
-                    <button id="btn-cancelar" form="form-esqueci-senha" type="submit" (click)="dialogIsVisible = !dialogIsVisible" label="Cancelar" pButton></button>
-                    <button class="btn-receberEmail" form="form-esqueci-senha" type="submit" (click)="enviarEmailDeSenhaEsquecida(formEsqueciSenha)" label="Receber e-mail" [disabled]="!formEsqueciSenha.valid" pButton></button>
-                </div>
-            </ng-template>
-
-
-        </p-dialog>
-    </form>
+      <ng-template pTemplate="footer">
+        <div class="botoes">
+          <button
+            id="btn-cancelar"
+            form="form-esqueci-senha"
+            type="submit"
+            (click)="dialogIsVisible = !dialogIsVisible"
+            label="Cancelar"
+            pButton
+          ></button>
+          <button
+            class="btn-receberEmail"
+            form="form-esqueci-senha"
+            type="submit"
+            (click)="enviarEmailDeSenhaEsquecida(formEsqueciSenha)"
+            label="Receber e-mail"
+            [disabled]="!formEsqueciSenha.valid"
+            pButton
+          ></button>
+        </div>
+      </ng-template>
+    </p-dialog>
+  </form>
 </div>
