--- a/src/app/usuarios/usuarios-nova-senha/usuarios-nova-senha.component.html
+++ b/src/app/usuarios/usuarios-nova-senha/usuarios-nova-senha.component.html
@@ -1,49 +1,100 @@
 <div class="p-grid p-justify-center card">
+  <div class="p-col-11 p-sm-10 p-md-4">
+    <h1>Alteração de senha</h1>
 
-    <div class="p-col-11 p-sm-10 p-md-4">
+    <p-card>
+      <div class="p-grid">
+        <form autocomplete="off" class="p-col-12" #formSenhas="ngForm">
+          <div class="p-field p-fluid">
+            <label for="senha">Senha</label>
+            <p-password
+              id="senha"
+              [feedback]="false"
+              toggleMask="true"
+              name="senha"
+              [(ngModel)]="novaSenha"
+              minlength="6"
+              maxlength="100"
+              required
+              #senha="ngModel"
+              ngModel
+            ></p-password>
 
-        <h1>Alteração de senha</h1>
+            <app-mensagem-de-erro
+              [controle]="senha"
+              erro="required"
+              mensagem="Informe sua antiga senha"
+            ></app-mensagem-de-erro>
+            <app-mensagem-de-erro
+              [controle]="senha"
+              erro="minlength"
+              mensagem="Mínimo de {{
+                senha.errors?.minlength?.requiredLength
+              }} caracteres"
+            ></app-mensagem-de-erro>
+          </div>
 
-        <p-card>
+          <div class="p-field p-fluid">
+            <label for="confirmacaoSenha">Confirme sua nova senha</label>
+            <p-password
+              id="confirmacaoSenha"
+              [feedback]="false"
+              toggleMask="true"
+              name="confirmacaoSenha"
+              [(ngModel)]="confirmacaoNovaSenha"
+              minlength="6"
+              maxlength="100"
+              required
+              #confirmacaoSenha="ngModel"
+              ngModel
+            ></p-password>
 
-            <div class="p-grid">
+            <app-mensagem-de-erro
+              [controle]="confirmacaoSenha"
+              erro="required"
+              mensagem="Informe sua antiga senha"
+            ></app-mensagem-de-erro>
+            <app-mensagem-de-erro
+              [controle]="confirmacaoSenha"
+              erro="minlength"
+              mensagem="Mínimo de {{
+                confirmacaoSenha.errors?.minlength?.requiredLength
+              }} caracteres"
+            ></app-mensagem-de-erro>
+          </div>
 
-                <form autocomplete="off" class="p-col-12" #formSenhas="ngForm">
-
-                    <div class="p-field p-fluid">
-                        <label for="senha">Senha</label>
-                        <p-password id="senha" [feedback]="false" toggleMask=true name="senha" [(ngModel)]="novaSenha" minlength="6" maxlength="100" required #senha="ngModel" ngModel></p-password>
-
-                        <app-mensagem-de-erro [controle]="senha" erro="required" mensagem="Informe sua antiga senha"></app-mensagem-de-erro>
-                        <app-mensagem-de-erro [controle]="senha" erro="minlength" mensagem="Mínimo de {{senha.errors?.minlength?.requiredLength}} caracteres"></app-mensagem-de-erro>
-                    </div>
-
-                    <div class="p-field p-fluid">
-                        <label for="confirmacaoSenha">Confirme sua nova senha</label>
-                        <p-password id="confirmacaoSenha" [feedback]="false" toggleMask=true name="confirmacaoSenha" [(ngModel)]="confirmacaoNovaSenha" minlength="6" maxlength="100" required #confirmacaoSenha="ngModel" ngModel></p-password>
-
-                        <app-mensagem-de-erro [controle]="confirmacaoSenha" erro="required" mensagem="Informe sua antiga senha"></app-mensagem-de-erro>
-                        <app-mensagem-de-erro [controle]="confirmacaoSenha" erro="minlength" mensagem="Mínimo de {{confirmacaoSenha.errors?.minlength?.requiredLength}} caracteres"></app-mensagem-de-erro>
-                    </div>
-
-
-                    <div class="footer">
-                        <button pButton type="button" label="Salvar" (click)="validaCompatibilidade()" [disabled]="!formSenhas.valid"></button>
-                    </div>
-
-                </form>
-
-            </div>
-
-        </p-card>
-
-    </div>
-
+          <div class="footer">
+            <button
+              pButton
+              type="button"
+              label="Salvar"
+              (click)="validaCompatibilidade()"
+              [disabled]="!formSenhas.valid"
+            ></button>
+          </div>
+        </form>
+      </div>
+    </p-card>
+  </div>
 </div>
 
-<p-confirmDialog #cd [style]="{width: '450px'}" [closable]="false">
-    <ng-template pTemplate="footer">
-        <button id="btn-cancelar" type="button" pButton icon="pi pi-times" label="Não" (click)="cd.reject()"></button>
-        <button class="btn-salvar" type="button" pButton icon="pi pi-check" label="Sim" (click)="cd.accept()"></button>
-    </ng-template>
+<p-confirmDialog #cd [style]="{ width: '450px' }" [closable]="false">
+  <ng-template pTemplate="footer">
+    <button
+      id="btn-cancelar"
+      type="button"
+      pButton
+      icon="pi pi-times"
+      label="Não"
+      (click)="cd.reject()"
+    ></button>
+    <button
+      class="btn-salvar"
+      type="button"
+      pButton
+      icon="pi pi-check"
+      label="Sim"
+      (click)="cd.accept()"
+    ></button>
+  </ng-template>
 </p-confirmDialog>
