--- a/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.css
+++ b/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.css
@@ -1,112 +1,112 @@
 :host ::ng-deep .p-dataview {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 :host ::ng-deep .p-dataview .p-dataview-header {
-    padding: 1rem .5rem;
+  padding: 1rem 0.5rem;
 }
 
 :host ::ng-deep .p-dataview .p-dataview-emptymessage {
-    text-align: center;
-    font-weight: bold;
+  text-align: center;
+  font-weight: bold;
 }
 
 .users-list-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .btn-new-user {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .campo-busca {
-    margin-right: .5rem;
-    width: 17rem;
+  margin-right: 0.5rem;
+  width: 17rem;
 }
 
 .user.true {
-    background-color: red;
+  background-color: red;
 }
 
 :host ::ng-deep .p-card:hover {
-    background-color: #a7c4d1
+  background-color: #a7c4d1;
 }
 
 .card-footer.true {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card-footer.false {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 :host ::ng-deep .p-card .p-card-footer {
-    padding-top: .5rem;
-    margin-top: 0.5rem;
+  padding-top: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 :host ::ng-deep .p-card {
-    margin: .5rem .5rem;
+  margin: 0.5rem 0.5rem;
 }
 
 :host ::ng-deep .p-card .p-card-content {
-    padding: 0;
+  padding: 0;
 }
 
 .user-icon {
-    margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .user-email,
 .user-matricula {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .user-matricula {
-    font-weight: 700;
-    font-size: 1.6rem;
+  font-weight: 700;
+  font-size: 1.6rem;
 }
 
 .user-email,
 .user-matricula {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .badge {
-    border-radius: 5px;
-    padding: 0 5px;
-    font-weight: 700;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: .3px;
-    background-color: #b3e5fc;
-    color: #23547b;
+  border-radius: 5px;
+  padding: 0 5px;
+  font-weight: 700;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 0.3px;
+  background-color: #b3e5fc;
+  color: #23547b;
 }
 
 .buttons-prev-next {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttons-prev-next .prev {
-    margin-right: 1rem;
+  margin-right: 1rem;
 }
 
 .spinner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #btn-editar {
-    margin-right: .5rem !important;
+  margin-right: 0.5rem !important;
 }
